--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,7 +1,18 @@
 .countries {
   padding: 1rem;
-  .countryImage {
-    height: 100%;
-    width: 20%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  .country {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    min-height: 100%;
+
+    .countryImage {
+      width: 100%;
+    }
   }
 }
