--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,10 @@
   color: white;
   align-items: center;
 
+  .title {
+    text-decoration: none;
+  }
+  
   .inputForm {
     display: flex;
     justify-content: space-between;
