--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,18 +1,12 @@
 .countries {
-  padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
   .country {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    min-height: 100%;
-
-    .countryImage {
-      width: 100%;
-    }
+    border-radius: 10px;
+    background-color: green;
+    margin: 10px;
+    height: 20rem;
   }
 }
