--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -4,8 +4,8 @@
 
   .country {
     display: flex;
+    flex-direction: column;
     border-radius: 10px;
-    background-color: green;
     margin: 10px;
     height: 20rem;
   }
