refactor: implement countryMap

--- a/src/components/Country/CountryMap/CountryMap.scss
+++ b/src/components/Country/CountryMap/CountryMap.scss
@@ -1,9 +1,10 @@
 .countryMap {
   width: 80%;
-  height: 700px;
-
-  border: 5px solid red;
 }
 .mapContainer {
   height: 700px;
+}
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar {
+  border: none;
 }
