--- a/src/components/Country/CountryMap/CountryMap.scss
+++ b/src/components/Country/CountryMap/CountryMap.scss
@@ -2,7 +2,7 @@
   width: 80%;
 }
 .mapContainer {
-  height: 700px;
+  height: 100vh;
 }
 .leaflet-touch .leaflet-control-layers,
 .leaflet-touch .leaflet-bar {
