--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,32 +1,46 @@
 .countries {
   display: grid;
   grid-template-columns: 1fr;
-
-  .card {
-    max-width: 345px;
-    height: 200px;
+  padding-right: 5px;
+  padding-left: 5px;
+  
+  .cardContainer {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    color: white;
+    justify-content: center;
+    margin-bottom: 10px;
+    
+    .card {
+      width: 345px;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s;
 
-    .countryImage::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.548),
-        rgba(0, 0, 0, 0.25)
-      );
+      .countryImage::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(
+          to top,
+          rgba(0, 0, 0, 0.548),
+          rgba(0, 0, 0, 0.25)
+        );
+      }
+
+      .link {
+        text-decoration: none;
+        color: white;
+      }
     }
 
-    .link {
-      text-decoration: none;
-      color: white;
+    .card:hover {
+      transform: scale(1.1);
     }
   }
 }
