feat: implement Attractions component

--- a/src/components/Country/Attractions/Attractions.scss
+++ b/src/components/Country/Attractions/Attractions.scss
@@ -1,1 +1,4 @@
 @import '~react-image-gallery/styles/scss/image-gallery.scss';
+.image-gallery-slide .image-gallery-description {
+  background: rgba(0, 0, 0, 0.7);
+}
