--- a/src/components/Country/Widgets/CurrencyWidget/CurrencyWidget.scss
+++ b/src/components/Country/Widgets/CurrencyWidget/CurrencyWidget.scss
@@ -1,7 +1,4 @@
-// .currencyWidget {
-//   position: absolute;
-//   right: 20px;
-//   top: 400px;
-//   background-color: antiquewhite;
-//   text-align: center;
-// }
+.currencyWidget img {
+  position: relative;
+  top: 5px;
+}
