--- a/src/components/Country/Attractions/Attractions.scss
+++ b/src/components/Country/Attractions/Attractions.scss
@@ -1,4 +1,22 @@
 @import '~react-image-gallery/styles/scss/image-gallery.scss';
-.image-gallery-slide .image-gallery-description {
-  background: rgba(0, 0, 0, 0.7);
+
+.attractions {
+  margin: 2rem 0;
+
+  .attractionsHeading {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .image-gallery-slide {
+    outline: none;
+
+    .image-gallery-description {
+      background: rgba(0, 0, 0, 0.7);
+    }
+  }
+
+  .image-gallery-icon:hover {
+    color: #4da8f7;
+  }
 }
