--- a/src/components/Country/Country.scss
+++ b/src/components/Country/Country.scss
@@ -1,6 +1,6 @@
-.country {
-  padding: 1rem;
-  div {
-    padding-bottom: 10px;
-  }
+.mainImage {
+  width: 100%;
+  object-fit: cover;
+  height: 20rem;
+  object-position: 50% 40%;
 }
