--- a/src/components/Country/Widgets/TimeWidget/TimeWidget.scss
+++ b/src/components/Country/Widgets/TimeWidget/TimeWidget.scss
@@ -1,7 +1,3 @@
-// .currencyWidget {
-//   position: absolute;
-//   right: 20px;
-//   top: 400px;
-//   background-color: antiquewhite;
-//   text-align: center;
-// }
+.timeWidget div {
+  padding-top: 5px;
+}
