--- a/src/components/Country/Widgets/WeatherWidget/WeatherWidget.scss
+++ b/src/components/Country/Widgets/WeatherWidget/WeatherWidget.scss
@@ -1,7 +1,3 @@
-// .weatherWidget {
-//   position: absolute;
-//   right: 20px;
-//   top: 400px;
-//   background-color: antiquewhite;
-//   text-align: center;
-// }
+.weatherWidget div {
+  padding-top: 5px;
+}
