--- a/src/components/Country/Widgets/Widgets.scss
+++ b/src/components/Country/Widgets/Widgets.scss
@@ -1,7 +1,14 @@
 .widgets {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: absolute;
-  right: 20px;
-  top: 100px;
-  background-color: antiquewhite;
+  right: 0;
+  top: 80px;
+  background-color: rgba(255, 255, 255, 0.2);
   text-align: center;
+  backdrop-filter: blur(6px);
+  height: 20rem;
+  padding: 10px;
 }
