--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,8 +1,8 @@
 .countries {
   display: grid;
   grid-template-columns: 1fr;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 3%;
+  padding-left: 3%;
 
   .cardContainer {
     display: flex;
@@ -10,6 +10,7 @@
     margin-bottom: 10px;
 
     .card {
+      position: relative;
       width: 90%;
       height: auto;
       max-width: 35rem;
@@ -20,6 +21,14 @@
       color: white;
       cursor: pointer;
       transition: transform 0.3s;
+
+      .countryImage {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+      }
 
       .countryImage::after {
         content: '';
@@ -96,4 +105,3 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
-
