--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,13 @@
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 5rem;
   background-color: rgb(0, 168, 247);
   color: white;
   align-items: center;
-
+  padding-left: 5%;
+  padding-right: 5%;
+  
   .inputForm {
     display: flex;
     justify-content: space-between;
