--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  width: auto;
   justify-content: space-between;
   height: 5rem;
   background-color: rgb(0, 168, 247);
@@ -7,29 +8,36 @@
   align-items: center;
   padding-left: 5%;
   padding-right: 5%;
+
+
+    .inputForm {
+      display: flex;
+      justify-content: space-between;
+      padding: 2px 4px;
+      align-items: center;
+      width: 400px;
+
+      .input {
+        margin-left: 5px;
+        width: 100%;
+      }
+      .icon {
+        padding: 10px;
+      }
+    }
+    .selectForm {
+      min-width: 120px;
+      background-color: white;
+      border-radius: 5px;
+
+      .MuiOutlinedInput-input {
+        padding: 14px;
+      }
+    }
+    .darkMode {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   
-  .inputForm {
-    display: flex;
-    justify-content: space-between;
-    padding: 2px 4px;
-    align-items: center;
-    width: 400px;
-
-    .input {
-      margin-left: 5px;
-      width: 100%;
-    }
-    .icon {
-      padding: 10px;
-    }
-  }
-  .selectForm {
-    min-width: 120px;
-    background-color: white;
-    border-radius: 5px;
-
-    .MuiOutlinedInput-input {
-      padding: 14px;
-    }
-  }
 }
