--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,11 +1,13 @@
 .countries {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding-right: 3%;
   padding-left: 3%;
 
   .cardContainer {
     display: flex;
+    flex: 0 1 25%;
     justify-content: center;
     margin-bottom: 10px;
 
@@ -56,35 +58,19 @@
   }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 1024px) {
   .countries {
-    display: grid;
-    grid-template-columns: 1fr;
     .cardContainer {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 10px;
-      .card {
-        width: 90%;
-        height: auto;
-        max-width: 40rem;
-        min-height: 18rem;
-      }
+      flex: 0 1 33%;
     }
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .countries {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     .cardContainer {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 10px;
+      flex: 0 1 50%;
       .card {
-        width: 90%;
-        height: auto;
         max-width: 30rem;
         min-height: 15rem;
       }
@@ -92,16 +78,14 @@
   }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (max-width: 480px) {
   .countries {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (min-width: 1800px) {
-  .countries {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    .cardContainer {
+      flex: 0 1 100%;
+      .card {
+        max-width: 40rem;
+        min-height: 18rem;
+      }
+    }
   }
 }
