--- a/src/components/Country/CountryMap/CountryMap.scss
+++ b/src/components/Country/CountryMap/CountryMap.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
 
   .fullScreenBtn {
-    background-color: #4da8f7;
+    background-color: rgb(0, 168, 247);
   }
 }
 
