feat: add media queries to Header

--- a/src/components/Country/Widgets/Widgets.scss
+++ b/src/components/Country/Widgets/Widgets.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   position: absolute;
   right: 0;
-  top: 80px;
+  top: 5rem;
   background-color: rgba(255, 255, 255, 0.2);
   text-align: center;
   backdrop-filter: blur(6px);
