--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,42 +2,88 @@
   display: flex;
   width: auto;
   justify-content: space-between;
-  height: 5rem;
+  padding: 1rem 0;
   background-color: rgb(0, 168, 247);
   color: white;
   align-items: center;
   padding-left: 5%;
   padding-right: 5%;
 
+  .inputForm {
+    display: flex;
+    justify-content: space-between;
+    padding: 2px 4px;
+    align-items: center;
+    width: 400px;
 
+    .input {
+      margin-left: 5px;
+      width: 100%;
+    }
+    .icon {
+      padding: 10px;
+    }
+  }
+  .selectForm {
+    min-width: 7.5rem;
+    background-color: white;
+    border-radius: 5px;
+    margin: 0 1rem;
+
+    .MuiOutlinedInput-input {
+      padding: 14px;
+    }
+  }
+  .darkMode {
+    outline: none;
+  }
+  .searchIcon {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .header {
     .inputForm {
+      display: none;
+    }
+    .searchIcon {
+      display: block;
+      color: #fff;
+    }
+    .inputFormMobile {
       display: flex;
-      justify-content: space-between;
-      padding: 2px 4px;
-      align-items: center;
-      width: 400px;
+      position: absolute;
+      z-index: 1;
+      top: 5rem;
+      right: 0;
+      left: 0;
+      padding: 0 2rem;
+      animation: show 0.5s ease-in-out;
 
-      .input {
-        margin-left: 5px;
+      .inputMobile {
         width: 100%;
       }
-      .icon {
-        padding: 10px;
-      }
     }
-    .selectForm {
-      min-width: 120px;
-      background-color: white;
-      border-radius: 5px;
 
-      .MuiOutlinedInput-input {
-        padding: 14px;
+    @keyframes show {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
       }
     }
-    .darkMode {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .header {
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    .inputFormMobile {
+      top: 7.3rem;
     }
-  
+  }
 }
