--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: auto;
   justify-content: space-between;
+  min-height: 5rem;
   padding: 1rem 0;
   background-color: rgb(0, 168, 247);
   color: white;
