--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,3 +1,5 @@
+@import '/src/colors.scss';
+
 .countries {
   display: flex;
   flex-wrap: wrap;
@@ -20,7 +22,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      color: white;
+      color: $white;
       cursor: pointer;
       transition: transform 0.3s;
 
@@ -48,7 +50,7 @@
 
       .link {
         text-decoration: none;
-        color: white;
+        color: $white;
       }
     }
 
