--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,12 @@
+@import '../../colors.scss';
+
 .header {
   display: flex;
   width: auto;
   justify-content: space-between;
   min-height: 5rem;
   padding: 1rem 0;
-  background-color: rgb(0, 168, 247);
+  background-color: $bgHeader-light;
   color: white;
   align-items: center;
   padding-left: 5%;
