--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,8 +1,5 @@
 .wrapper {
-  padding-left: 1em;
-  padding-right: 1em;
   margin: auto;
-  display: block;
   width: 195px;
 }
 
@@ -51,7 +48,7 @@
   position: relative;
   transform: translateZ(0) scale(1);
   backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
+  transform-origin: 0 0;
 }
 .ldio div {
   box-sizing: content-box;
