--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -6,7 +6,8 @@
   justify-content: center;
   padding-right: 3%;
   padding-left: 3%;
-
+  padding-bottom: 20px;
+  
   .cardContainer {
     display: flex;
     flex: 0 1 25%;
