--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,10 @@ body.dark-mode {
     color: $textPage-light;
     background-color: $bgPage-dark;
   }
+  .notFoundBtn {
+    color: $white;
+    border-color: $white;
+  }
   @media screen and (max-width: 880px) {
     .MuiList-root {
       color: $white;
